--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
-
 <!DOCTYPE html>
 <html>
 <head>
   <meta charset="UTF-8">
   <title>Bienvenue à Banfora</title>
-  <link rel="stylesheet" href="acceuil.css"> <!-- Ici on lie le fichier CSS externe -->
+  <link rel="stylesheet" href="acceuil.css">
   <style>
     main {
-      background-color: rgba(255, 255, 255, 0.75); /* fond blanc transparent */
-      color: black; /* texte noir */
+      background-color: rgba(255, 255, 255, 0.75);
+      color: black;
       padding: 20px;
       border-radius: 8px;
       max-width: 900px;
