--- a/acceuil.html
+++ b/acceuil.html
@@ -3,14 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <title>Bienvenue à Banfora</title>
-  <link rel="stylesheet" href="Acceuil.css"> <!-- Ici on lie le fichier CSS externe -->
+  <link rel="stylesheet" href="acceuil.css"> <!-- Ici on lie le fichier CSS externe -->
 </head>
 <body>
   <header>
     <img src="images/logo.png" alt="Logo de Banfora" width="300">
     <h1>Banfora</h1>
     <nav>
-      <a href="acceuil.html">acceuil</a>
+      <!-- ✅ CORRECTION ICI : on pointe vers ./ ou index.html -->
+      <a href="acceuil.html">Accueil</a>
       <a href="patrimoine.html">Patrimoine</a>
       <a href="reservation.html">Réservation d'hôtel</a>
       <a href="galerie.html">Galerie</a>
