--- a/acceuil.html
+++ b/acceuil.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bienvenue à Banfora</title>
-  <link rel="stylesheet" href="Acceuil.css"> <!-- Ici on lie le fichier CSS externe -->
+  <link rel="stylesheet" href="acceuil.css"> <!-- Ici on lie le fichier CSS externe -->
 </head>
 
 <body>
