--- a/acceuil.html
+++ b/acceuil.html
@@ -1,36 +1,49 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
   <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bienvenue à Banfora</title>
-  <link rel="stylesheet" href="acceuil.css"> <!-- Ici on lie le fichier CSS externe -->
-</head>
-
-<body>
-  <header>
-    <img src="images/logo.png" alt="Logo de Banfora" width="300">
-    <h1>Banfora</h1>
-    <nav>
-      <a href="acceuil.html">acceuil</a>
-      <a href="patrimoine.html">Patrimoine</a>
-      <a href="reservation.html">Réservation d'hôtel</a>
-      <a href="galerie.html">Galerie</a>
-    </nav>
-  </header>
+  <link rel="stylesheet" href="acceuil.css"> <!-- Lien vers ton fichier CSS -->
   <style>
     main {
       background-color: rgba(255, 255, 255, 0.75); /* fond blanc transparent */
-      color: black; /* texte noir */
+      color: black;
       padding: 20px;
       border-radius: 8px;
       max-width: 900px;
       margin: 20px auto;
       text-align: center;
     }
+
+    footer {
+      text-align: center;
+      padding: 8px 10px;
+      background: yellow;
+      font-size: 12px;
+      color: black;
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      box-shadow: 0 -1px 3px rgba(0,0,0,0.1);
+      z-index: 1000;
+    }
   </style>
 </head>
+
 <body>
+
+  <header>
+    <img src="images/logo.png" alt="Logo de Banfora" width="300">
+    <h1>Banfora</h1>
+    <nav>
+      <a href="acceuil.html">Accueil</a>
+      <a href="patrimoine.html">Patrimoine</a>
+      <a href="reservation.html">Réservation d'hôtel</a>
+      <a href="galerie.html">Galerie</a>
+    </nav>
+  </header>
 
   <main>
     <h2><b>Bienvenue à Banfora !</b></h2>
@@ -42,25 +55,10 @@
     </b></p>
   </main>
 
-<footer>
-  <p>Projet réalisé par : <strong>ZALLE DIAKALIA</strong> &amp; <strong>SERME LAPANON GHISLAIN</strong></p>
-  <p>ESI-1 p2024 Burkina Faso</p>
-</footer>
+  <footer>
+    <p>Projet réalisé par : <strong>ZALLE DIAKALIA</strong> &amp; <strong>SERME LAPANON GHISLAIN</strong></p>
+    <p>ESI-1 p2024 Burkina Faso</p>
+  </footer>
 
-<style>
-footer {
-  text-align: center;
-  padding: 8px 10px;
-  background: yellow;
-  font-size: 12px;
-  color: black;
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  box-shadow: 0 -1px 3px rgba(0,0,0,0.1);
-  z-index: 1000;
-}
-</style>
 </body>
 </html>
